Revert "try to fix Largest Contentful Paint element on mobile"
This reverts commit 5ddc042ad8fdf9b43920b30b821debd2ddda0854.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -123,23 +123,6 @@
     font-weight: var(--shiki-dark-font-weight) !important;
     text-decoration: var(--shiki-dark-text-decoration) !important;
   }
-  .text-priority {
-    content-visibility: auto;
-    contain-intrinsic-size: 0 500px;
-  }
-  @media (prefers-reduced-motion: no-preference) {
-    .text-priority {
-      animation: fadeIn 0.5s ease-in;
-    }
-  }
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
 }
 
 @layer components {
